--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,24 +1,24 @@
 <div class="social-links">
     {% if site.twitter %}
-        <a class="link" href="http://twitter.com/{{ site.twitter }}" target="_blank">
+        <a class="link" data-title="twitter.com/{{ site.twitter }}" href="http://twitter.com/{{ site.twitter }}" target="_blank">
             <svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
         </a>
     {% endif %}
 
     {% if site.linkedin %}
-        <a class="link" href="http://linkedin.com/in/{{ site.linkedin }}" target="_blank">
+        <a class="link" data-title="linkedin.com/in/{{ site.linkedin }}" href="http://linkedin.com/in/{{ site.linkedin }}" target="_blank">
             <svg class="icon icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg>
         </a>
     {% endif %}
 
     {% if site.github %}
-        <a class="link" href="https://github.com/{{ site.github }}" target="_blank">
+        <a class="link" data-title="github.com/{{ site.github }}" href="https://github.com/{{ site.github }}" target="_blank">
             <svg class="icon icon-github"><use xlink:href="#icon-github"></use></svg>
         </a>
     {% endif %}
 
     {% if site.email %}
-        <a class="link" href="mailto:{{ site.email }}">
+        <a class="link" data-title="{{ site.email }}" href="mailto:{{ site.email }}">
             <svg class="icon icon-mail"><use xlink:href="#icon-mail"></use></svg>
         </a>
     {% endif %}
